--- a/GMM/app/src/main/AndroidManifest.xml
+++ b/GMM/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".chat1"></activity>
+        <activity android:name=".location"></activity>
     </application>
 
 </manifest>
