--- a/GMM/app/build.gradle
+++ b/GMM/app/build.gradle
@@ -30,8 +30,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
-    compile 'com.google.android.gms:play-services:9.2.0'
+    compile 'com.google.android.gms:play-services:9.6.1'
     compile 'com.android.support:design:24.0.0'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
 }
+apply plugin: 'com.google.gms.google-services'
