--- a/GMM/app/build.gradle
+++ b/GMM/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
