--- a/GMM/app/src/main/AndroidManifest.xml
+++ b/GMM/app/src/main/AndroidManifest.xml
@@ -23,15 +23,17 @@
         android:name=".GMMApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".location"></activity>
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ChatActivity"></activity>
-        <activity android:name=".location"></activity>
-
         <service
             android:name=".service.FirebaseMessagingService">
             <intent-filter>
