--- a/GMM/app/src/main/AndroidManifest.xml
+++ b/GMM/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name=".ChatActivity"></activity>
         <activity android:name=".location"></activity>
+        <activity android:name=".CreateRoomActivity"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
