--- a/GMM/app/src/main/AndroidManifest.xml
+++ b/GMM/app/src/main/AndroidManifest.xml
@@ -22,13 +22,12 @@
         android:supportsRtl="true"
         android:name=".GMMApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".ChatActivity"></activity>
         <activity android:name=".location"></activity>
         <activity android:name=".CreateRoomActivity"></activity>
         <activity android:name=".MeetingTime"></activity>
+        <activity android:name=".myMeetingTime"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
