--- a/GMM/app/build.gradle
+++ b/GMM/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
 apply plugin: 'com.google.gms.google-services'
