--- a/GMM/app/src/main/AndroidManifest.xml
+++ b/GMM/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".CreateRoomActivity"></activity>
         <activity android:name=".MeetingTime"></activity>
         <activity android:name=".myMeetingTime"></activity>
+        <activity android:name=".SettingActivity"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
