조모임 장소 추천 목록 Activity UI 구성 완료

--- a/GMM/app/src/main/AndroidManifest.xml
+++ b/GMM/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".MeetingTime"></activity>
         <activity android:name=".myMeetingTime"></activity>
         <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".MeetLocationListActivity"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
