--- a/GMM/app/src/main/AndroidManifest.xml
+++ b/GMM/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:required="true" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name=".GMMApplication"
